--- a/views/auth/forgotPassword.hbs
+++ b/views/auth/forgotPassword.hbs
@@ -24,7 +24,7 @@
   const messageReceived = "{{message}}";
   if (messageReceived != "") {
     if (messageReceived == "You can not use this feature because this account is already used with social media platform.") {
-      window.location.replace("http://localhost:5000/account/login");
+      window.location.replace("/account/login");
     }
     alert(`${messageReceived}`);
   }
