--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -54,7 +54,7 @@
   }
   else if (messageReceived == "success")
   {
-    window.location.replace("http://localhost:5000/");
+    window.location.replace("/");
   }
   // submit login form
   $('#login-form').on('submit', (e) => {
