--- a/views/auth/newPassword.hbs
+++ b/views/auth/newPassword.hbs
@@ -41,7 +41,7 @@
   else if (messageReceived == "success")
   {
     alert("You reset password successfully. Please log in to your account...");
-    window.location.replace("http://localhost:5000/account/login");
+    window.location.replace("/account/login");
   }
   // submit form
   $("#new-pwd-form").on('submit', (e) => {
