--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -41,9 +41,12 @@
     {{!-- BEGIN GLOBAL --}}
     <script src="https://kit.fontawesome.com/46668bc562.js" crossorigin="anonymous"></script>
     
-    <link rel="stylesheet" href="/assets/bootstrap.min.css" type="text/css" />
-    <script src="/assets/jquery.min.js"></script>
-    <script src="/assets/bootstrap.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script
+  src="https://code.jquery.com/jquery-3.6.3.slim.min.js"
+  integrity="sha256-ZwqZIVdD3iXNyGHbSYdsmWP//UBokj2FHAxKuSBKDSo="
+  crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     
     <link rel="stylesheet" href="/assets/css/index.css" type="text/css" />
     {{!-- END GLOBAL --}}
